--- a/src/app/components/app-artist-list/app-artists-list.component.html
+++ b/src/app/components/app-artist-list/app-artists-list.component.html
@@ -5,5 +5,7 @@
     Loading...
   </div>
 
-  <app-artist-component *ngFor="let artist of artists" [artist]="artist"></app-artist-component>
+  <app-artist-component
+    *ngFor="let artist of artists" [artist]="artist"
+  ></app-artist-component>
 </div>
