--- a/src/app/components/app-artist-details-item/app-artist-details-item.component.html
+++ b/src/app/components/app-artist-details-item/app-artist-details-item.component.html
@@ -1,4 +1,4 @@
-<div class="border border-black rounded my-4 bg-gray-200">
+<div class="border border-black rounded my-4 bg-white">
   <h2 class="font-bold text-center pt-4">{{title.toUpperCase() | titlecase}}</h2>
 
   <div class="flex flex-row justify-center">
