--- a/src/app/components/app-artist-item/app-artist.component.html
+++ b/src/app/components/app-artist-item/app-artist.component.html
@@ -1,4 +1,6 @@
-<div class="py-4 px-6 border border-blue-200 rounded flex items-center flex-col mb-8 bg-gray-50">
+<div
+  class="py-4 px-6 border border-gray-500 rounded flex items-center flex-col mb-8 hover:bg-gray-100"
+  [ngClass]="{'bg-gray-100': showDetails, 'bg-gray-0': !showDetails}">
   <h1>{{artist.name | titlecase}}</h1>
   <img [src]="artist.image[1]['#text']" [alt]="artist.name">
   <p>Listeners: {{artist.listeners}}</p>
