add pipes to components

--- a/src/app/components/app-artist-list/app-artists-list.component.html
+++ b/src/app/components/app-artist-list/app-artists-list.component.html
@@ -6,6 +6,6 @@
   </div>
 
   <app-artist-component
-    *ngFor="let artist of artists" [artist]="artist"
+    *ngFor="let artist of artists$ | async" [artist]="artist"
   ></app-artist-component>
 </div>
