component name correction

--- a/src/app/components/app-artist-list/app-artists-list.component.html
+++ b/src/app/components/app-artist-list/app-artists-list.component.html
@@ -5,7 +5,7 @@
     Loading...
   </div>
 
-  <app-artist-component
+  <app-artist-list-item-component
     *ngFor="let artist of artists$ | async" [artist]="artist"
-  ></app-artist-component>
+  ></app-artist-list-item-component>
 </div>
