--- a/src/app/components/app-navigation/app-navigation.component.html
+++ b/src/app/components/app-navigation/app-navigation.component.html
@@ -1,21 +1,10 @@
 <div>
-
   <div class="text-center font-bold text-2xl">
     {{ title.toUpperCase() }}
     <h4>TOP 10 artists</h4>
   </div>
 
   <div class="flex items-center flex-col pt-8">
-    <form class="example-form">
-      <mat-form-field class="example-full-width w-80" appearance="fill">
-        <mat-label>Search...</mat-label>
-        <input type="text" matInput [formControl]="searchControl" [matAutocomplete]="auto">
-        <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-          <mat-option *ngFor="let artist of artists$ | async" [value]="artist">
-            {{artist.name}}
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
-    </form>
+    <app-input-search-artist></app-input-search-artist>
   </div>
 </div>
